
AM_CPPFLAGS = \
	-I$(top_srcdir)/include \
	-I$(top_srcdir)/test/include

check_PROGRAMS = test

test_SOURCES = \
	test_main.cpp \
	test_store_types.cpp \
	test_std_vector_bool.cpp \
	test_no_standard_blocks_aos.cpp \
	test_no_standard_blocks_soa.cpp \
	$(top_srcdir)/test/test_global.cpp

TESTS = test
